--- a/src/WebUI/ClientApp/src/app/todo/todo.component.html
+++ b/src/WebUI/ClientApp/src/app/todo/todo.component.html
@@ -38,7 +38,7 @@
         </button>
       </div>
       <ul id="todo-items" class="list-group mb-2">
-        <li class="list-group-item" *ngFor="let item of selectedList.items; index as i">
+        <li class="list-group-item" style="background-color: {{ item.colour }}" *ngFor="let item of selectedList.items; index as i">
           <div class="d-flex">
             <div class="todo-item-checkbox">
               <input type="checkbox" [(ngModel)]="item.done" (change)="updateItem(item)" />
@@ -121,6 +121,12 @@
         <label for="priority">Priority</label>
         <select class="form-control" formControlName="priority">
           <option [ngValue]="level.value" *ngFor="let level of priorityLevels">{{ level.name }}</option>
+        </select>
+      </div>
+      <div class="form-group">
+        <label for="colour">Color</label>
+        <select class="form-control" style="background-color: {{ itemDetailsFormGroup.value.colour }}" formControlName="colour" (change)="onColorChange()">
+          <option style="background-color: {{ color.code }}" [ngValue]="color.code" *ngFor="let color of colors">{{ color.name }}</option>
         </select>
       </div>
       <div class="form-group">
